# xf86-input-wacom

./: .editorconfig  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  acinclude.m4  bootstrap  config-ver.h.in  configure.ac  configure.in  git-version-gen  meson.build  meson_options.txt  mkxincludes.in  release.sh  xorg-wacom.pc.in
.github/workflows/: black.yml  build.yml  coverity.yml  gitlab.yml  main.yml
conf/: .gitignore  20-wacom.conf  50-wacom.conf  70-wacom.conf  Makefile.am  wacom-inputattach@.service.in  wacom-preprobe.fdi  wacom.fdi  wacom.rules
doc/: Makefile.am  doxygen.conf  doxygen.conf.in
docs/: docs.html  docs.txt
fdi/: Makefile.am  wacom.fdi
include/: Makefile.am  Xwacom.h  isdv4.h  solaris-usbwcm.h  wacom-properties.h  wacom-util.h
man/: Makefile.am  wacom.man  xsetwacom.man
prebuilt/: install  uninstall
src/: .gitignore  Makefile.am  WacomInterface.h  Xwacom.h  common.mk  evdev.c  hid-core.c  hid-input.c  hiddev.c  input.c  mousedev.c  tabletdev.c  usbmouse.c  wacdump.c  wacom.4x  wacom.c  wacomcfg.c  wacomcfg.h  wacomcpl  wacomxi.c  wacomxi.h  wacscrn.c  wacserial.c  wacserial.h  wactablet.c  wactablet.h  wacusb.c  wacusb.h  wcm-beta.c  wcm-beta.h  wcm-client.c  wcmCommon.c  wcmCompat.c  wcmConfig.c  wcmFilter.c  wcmFilter.h  wcmISDV4-stub.c  wcmISDV4.c  wcmISDV4.h  wcmPressureCurve.c  (+14 more)
src/2.4/: Makefile.am  evdev.c  hid-core.c  hid-input.c  input.c  mousedev.c  usbmouse.c  wacom.c
src/2.4.22/: .gitignore  Makefile.am  evdev.c  hid-core.c  mousedev.c  wacom.c
src/2.4.30x86-64/: evdev.c  hid-core.c  mousedev.c  usbmouse.c  wacom.c
src/2.6/: Makefile.am  Makefile.in  evdev.c  hid-core.c  mousedev.c  usbmouse.c  wacom.c
src/2.6.10/: Makefile.in  hid-core.c  usbmouse.c  wacom.c
src/2.6.11/: Makefile.in  evdev.c  hid-core.c  mousedev.c  usbmouse.c  wacom.c  wacom.h  wacom_sys.c
src/2.6.13/: .gitignore  Makefile.in  evdev.c  hid-core.c  mousedev.c  usbmouse.c  wacom.c  wacom.h  wacom_sys.c
src/2.6.14/: .gitignore  Makefile.in  evdev.c  hid-core.c  usbmouse.c  wacom.c
src/2.6.15/: .gitignore  Makefile.in  hid-core.c  wacom.c  wacom_sys.c
src/2.6.16/: Makefile.in  hid-core.c  wacom.c  wacom.h  wacom_sys.c  wacom_wac.c  wacom_wac.h
src/2.6.18/: .gitignore  Makefile.in  wacom.h  wacom_sys.c
src/2.6.19/: .gitignore  Makefile.in  wacom.h  wacom_sys.c  wacom_wac.c
src/2.6.2/: Makefile.am  Makefile.in  evdev.c  hid-core.c  mousedev.c  usbmouse.c  wacom.c
src/2.6.22/: .gitignore  Makefile.in  wacom_sys.c  wacom_wac.h
src/2.6.24/: .gitignore  Makefile.in  wacom.h  wacom_sys.c
src/2.6.26/: Makefile.in  wacom.h  wacom_sys.c
src/2.6.27/: Makefile.in  wacom.h  wacom_sys.c  wacom_wac.c  wacom_wac.h
src/2.6.28/: Makefile.in  wacom_sys.c  wacom_wac.c  wacom_wac.h
src/2.6.3/: Makefile.am  Makefile.in  evdev.c  hid-core.c  mousedev.c  usbmouse.c  wacom.c
src/2.6.31/: Makefile.in
src/2.6.4/: Makefile.am  Makefile.in  evdev.c  hid-core.c  mousedev.c  usbmouse.c  wacom.c
src/2.6.5/: Makefile.am  Makefile.in  evdev.c  hid-core.c  mousedev.c  usbmouse.c  wacom.c
src/2.6.6/: Makefile.am  Makefile.in  evdev.c  hid-core.c  mousedev.c  usbmouse.c  wacom.c
src/2.6.7/: Makefile.am  evdev.c  hid-core.c  mousedev.c  usbmouse.c  wacom.c
src/2.6.8/: .gitignore  Makefile.am  Makefile.in  evdev.c  hid-core.c  mousedev.c  usbmouse.c  wacom.c
src/2.6.9/: Makefile.am  Makefile.in  evdev.c  hid-core.c  mousedev.c  usbmouse.c  wacom.c
src/gwacom/: wacom-device.c  wacom-device.h  wacom-driver.c  wacom-driver.h  wacom-private.h
src/include/: .gitignore  Xwacom.h  kernel-config.h  kernel-config.h.in  util-config.h  util-config.h.in  wcmAction.h  xdrv-config.h  xdrv-config.h.in
src/util/: .gitignore  10-linuxwacom.fdi  60-wacom.rules  Makefile.am  hal-setup-wacom.c  wacdump.c  wacomcfg.c  wacomcfg.h  wacscrn.c  wacscrn.h  wacserial.c  wacserial.h  wactablet.c  wactablet.h  wacusb.c  wacusb.h  wcmAction.c  wcmAction.h  xidump.c  xsetwacom.c
src/wacomxi/: .gitignore  Makefile.am  pkgIndex.tcl  wacomcpl-exec  wacomcpl.in  wacomxi.c  wacomxi.h
src/x11/: xf86Wacom.c  xf86WacomProperties.c
src/xdrv/: Makefile.am  wcmCommon.c  wcmCompat.c  wcmConfig.c  wcmFilter.c  wcmFilter.h  wcmISDV4.c  wcmMapping.c  wcmSerial.c  wcmSerial.h  wcmTouchFilter.c  wcmUSB.c  wcmValidateDevice.c  wcmXCommand.c  xf86Wacom.c  xf86Wacom.h  xf86WacomDefs.h
test/: Makefile.am  __init__.py  conftest.py  fake-symbols.c  fake-symbols.h  test_wacom.py  tester.c  wacom-test-env.sh  wacom-test-suite.c  wacom-test-suite.h  wacom-tests.c
test/devices/: wacom-pth660.yml
tools/: .gitignore  Makefile.am  isdv4-serial-debugger.c  isdv4-serial-inputattach.c  pressurecurve.c  tools-shared.c  tools-shared.h  wacom-record.c  xsetwacom.c
